--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 NODE_ENV=development
+TOKEN_SECRET=sherman
 MONGODB_URI=mongodb+srv://rony120114:rony.120114@sherman.pose2go.mongodb.net/sherman?retryWrites=true&w=majority&appName=Sherman
